normfree.tt
grammar Normfree

  rule text
    ( directive / comment / quoted / unquoted )* <Text>
  end

  rule comment
    "!" [^\n]* <Delete>
  end

  rule directive
    "@" [^\n]* <Directive>
  end

  rule quoted
    ( [\"] [^\"]* [\"] / [\'] [^\']* [\'] )+ <Quoted>
  end

  rule unquoted
    [^\'\"!@]+ <Normalize>
  end

end

# paul.a.madden@noaa.gov
